spec/grammar.ebnf
(* ============================================================
   ll-lang Grammar — EBNF Reference
   File extension: .lll
   Encoding: UTF-8, ASCII-only operators
   Indentation: significant (2 or 4 spaces, consistent per file)
   Comments: -- to end of line
   ============================================================ *)

(* --- Whitespace & Comments ---------------------------------- *)
WS      ::= (' ' | '\t')+
NEWLINE ::= '\n' | '\r\n'
COMMENT ::= '--' [^\n]*
INDENT  ::= synthetic token — emitted when indentation increases
DEDENT  ::= synthetic token — emitted when indentation decreases

(* --- Keywords ----------------------------------------------- *)
KW ::= "fn" | "let" | "tag" | "unit"
     | "trait" | "impl" | "import" | "export" | "module"
     | "match" | "if" | "else" | "true" | "false"
     (* "with" removed; "type" removed — type decls start with TYPEID directly *)

(* --- Identifiers -------------------------------------------- *)
(* value identifiers: lowercase start *)
IDENT  ::= [a-z_][a-zA-Z0-9_]*

(* type/constructor/module identifiers: uppercase start *)
TYPEID ::= [A-Z][a-zA-Z0-9_]*

(* --- Literals ----------------------------------------------- *)
INT_LIT   ::= [0-9]+
FLOAT_LIT ::= [0-9]+ '.' [0-9]+
STR_LIT   ::= '"' ( [^"\\] | '\\' . )* '"'
BOOL_LIT  ::= "true" | "false"

(* --- Operators & Punctuation -------------------------------- *)
OP_PIPE    ::= "->"
OP_LAMBDA  ::= "\"
OP_DOT     ::= "."
OP_COMMA   ::= ","
OP_COLON   ::= ":"
OP_EQ      ::= "="
OP_ARROW   ::= "->"       (* same as pipe — context disambiguates *)
OP_BAR     ::= "|"
OP_LBRACK  ::= "["
OP_RBRACK  ::= "]"
OP_LPAREN  ::= "("
OP_RPAREN  ::= ")"
OP_PLUS    ::= "+"
OP_MINUS   ::= "-"
OP_STAR    ::= "*"
OP_SLASH   ::= "/"
OP_CARET   ::= "^"
OP_LT      ::= "<"
OP_GT      ::= ">"
OP_LE      ::= "<="
OP_GE      ::= ">="
OP_EQ2        ::= "=="
OP_NEQ        ::= "!="
OP_UNDERSCORE ::= "_"

(* ============================================================
   Expressions
   ============================================================ *)

expr ::= let-expr
       | lambda-expr
       | if-expr
       | match-expr
       | pipe-expr
       | arith-expr

(* pipe: left-associative, lowest precedence after if/match *)
pipe-expr ::= arith-expr (OP_PIPE arith-expr)*

(* arithmetic: standard precedence *)
arith-expr  ::= cmp-expr ((OP_PLUS | OP_MINUS) cmp-expr)*
cmp-expr    ::= app-expr ((OP_LT | OP_GT | OP_LE | OP_GE | OP_EQ2 | OP_NEQ) app-expr)*
app-expr    ::= atom atom*                         (* juxtaposition = curried application *)
atom        ::= tagged-lit
              | literal
              | IDENT
              | list-lit
              | tuple-lit
              | OP_LPAREN expr OP_RPAREN            (* grouping — human mode *)

(* literals *)
literal     ::= INT_LIT | FLOAT_LIT | STR_LIT | BOOL_LIT

(* tagged literal: value[Tag] *)
tagged-lit  ::= atom OP_LBRACK TYPEID OP_RBRACK

(* collections *)
list-lit    ::= OP_LBRACK expr* OP_RBRACK          (* space-separated elements *)
tuple-lit   ::= expr OP_COMMA expr (OP_COMMA expr)* (* comma = tuple *)

(* let binding — bare form only; continuations chain via layout (parseBlockExpr) *)
let-expr    ::= "let" IDENT "=" expr

(* lambda *)
lambda-expr ::= OP_LAMBDA IDENT+ OP_DOT expr

(* conditional — `then` has been removed; condition is separated from body
   by a newline. Inline form requires the body on the next (indented) line. *)
if-expr     ::= "if" expr NEWLINE expr NEWLINE "else" expr

(* pattern match: "with" removed — arms follow scrutinee directly *)
match-expr  ::= "match" expr NEWLINE INDENT (OP_BAR pattern OP_ARROW expr NEWLINE)+ DEDENT

pattern     ::= TYPEID pattern*    (* constructor pattern *)
              | IDENT               (* variable binding *)
              | literal             (* literal match *)
              | OP_UNDERSCORE       (* wildcard *)

(* ============================================================
   Types
   ============================================================ *)

type-expr ::= fn-type
fn-type   ::= app-type (OP_ARROW fn-type)*      (* right-associative *)
app-type  ::= base-type (OP_LBRACK type-expr OP_RBRACK)*   (* parametric *)
base-type ::= TYPEID                             (* Int, Str, Maybe, etc *)
            | IDENT                              (* type variable: a, b *)
            | OP_LPAREN type-expr OP_RPAREN

(* unit algebra applied as tag on numeric types *)
unit-expr ::= TYPEID                             (* m, s, kg *)
            | unit-expr OP_STAR unit-expr
            | unit-expr OP_SLASH unit-expr
            | unit-expr OP_CARET INT_LIT

(* ============================================================
   Declarations
   ============================================================ *)

decl ::= fn-decl
       | let-decl
       | type-decl
       | tag-decl
       | unit-decl
       | trait-decl
       | impl-decl

(* --- let (top-level) --------------------------------------- *)
let-decl ::= "let" IDENT "=" expr

(* --- fn ---------------------------------------------------- *)
fn-decl ::= "fn" IDENT constraint* param* type-expr? "=" expr
          | "fn" IDENT constraint* param* type-expr? "=" NEWLINE INDENT expr DEDENT

param      ::= OP_LPAREN IDENT type-expr OP_RPAREN    (* typed param *)
constraint ::= OP_LBRACK IDENT ":" TYPEID OP_RBRACK   (* [F: Functor] *)

(* --- type -------------------------------------------------- *)
(* type vars: either bare (type Maybe A) or bracketed phantom (type Email[state]) *)
type-decl ::= TYPEID type-param* "=" type-body
type-param ::= IDENT                                  (* bare type variable: A, E *)
             | OP_LBRACK IDENT OP_RBRACK              (* phantom bracket param: [state] *)
type-var  ::= IDENT
type-body ::= sum-type | record-type | wrapped-type

sum-type     ::= constructor (OP_BAR constructor)*
constructor  ::= TYPEID type-expr*

record-type  ::= field (OP_COMMA field)*
field        ::= IDENT type-expr

wrapped-type ::= type-expr          (* newtype via tag *)

(* --- tag & unit -------------------------------------------- *)
tag-decl  ::= "tag" TYPEID
unit-decl ::= "unit" TYPEID

(* --- trait ------------------------------------------------- *)
trait-decl ::= "trait" TYPEID type-var+ "=" NEWLINE INDENT fn-sig+ DEDENT
fn-sig     ::= "fn" IDENT param+ type-expr

(* --- impl -------------------------------------------------- *)
impl-decl ::= "impl" TYPEID TYPEID "=" NEWLINE INDENT fn-decl+ DEDENT

(* ============================================================
   Module
   ============================================================ *)

module ::= "module" module-path NEWLINE
           (import-decl | export-decl | decl)*

module-path  ::= TYPEID (OP_DOT TYPEID)*
import-decl  ::= "import" module-path
export-decl  ::= "export" decl

(* ============================================================
   Implementation notes for Phase 2 (Lexer/Parser in F#)
   ============================================================
   1. INDENT/DEDENT are synthetic — emit from whitespace changes, not literal tokens.
   2. "->" is used for pipe (expr), type arrow (type-expr), and match branch.
      Disambiguation: in expr context, "->" is pipe only between app-exprs;
      type arrow appears only in type-expr; match arrow follows a pattern.
   3. "[" disambiguation: list literal has space-separated exprs;
      tag application has exactly one TYPEID followed by "]";
      parametric type has one type-expr.
      Lookahead: if next token after "[" is TYPEID and then "]", it's a tag.
   4. "," is tuple-forming only in expr context; record fields use "," in type-decl.
   5. Keywords are reserved — cannot be used as IDENT or TYPEID.
   6. "\" begins a lambda expression. Followed by one or more IDENT, then ".", then expr.
   ============================================================ *)
